feat: set initial hyperparameters.

--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -724,9 +724,9 @@
    "outputs": [],
    "source": [
     "# TODO: Tune Parameters\n",
-    "epochs = None\n",
-    "batch_size = None\n",
-    "keep_probability = None"
+    "epochs = 1\n",
+    "batch_size = 96\n",
+    "keep_probability = .5"
    ]
   },
   {
