--- a/transfer-learning/Transfer_Learning.ipynb
+++ b/transfer-learning/Transfer_Learning.ipynb
@@ -74,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tarfile\n",
@@ -733,7 +735,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
@@ -797,7 +801,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "inputs_ = tf.placeholder(tf.float32, shape=[None, codes.shape[1]])\n",
