--- a/gan_mnist/Intro_to_GANs_Exercises.ipynb
+++ b/gan_mnist/Intro_to_GANs_Exercises.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -214,7 +214,7 @@
     "        -------\n",
     "        out, logits: \n",
     "    '''\n",
-    "    with tf.variable_scope('descriminator', reuse=reuse): # finish this\n",
+    "    with tf.variable_scope('dis', reuse=reuse): # finish this\n",
     "        # Hidden layer\n",
     "        h1 = tf.layers.dense(x, n_units, activation=None)\n",
     "        # Leaky ReLU\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -387,12 +387,12 @@
     "learning_rate = 0.002\n",
     "\n",
     "# Get the trainable_variables, split into G and D parts\n",
-    "t_vars = \n",
-    "g_vars = \n",
-    "d_vars = \n",
+    "t_vars = tf.trainable_variables()\n",
+    "g_vars = [x for x in t_vars if x.name.startswith(\"gen\")]\n",
+    "d_vars = [x for x in t_vars if x.name.startswith(\"dis\")]\n",
     "\n",
-    "d_train_opt = \n",
-    "g_train_opt = "
+    "d_train_opt = tf.train.AdamOptimizer().minimize(d_loss, var_list=d_vars)\n",
+    "g_train_opt = tf.train.AdamOptimizer().minimize(g_loss, var_list=g_vars)"
    ]
   },
   {
@@ -409,15 +409,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Epoch 1/5...', 'Discriminator Loss: 0.4472...', 'Generator Loss: 4.4777')\n",
+      "('Epoch 2/5...', 'Discriminator Loss: 1.1898...', 'Generator Loss: 1.6743')\n",
+      "('Epoch 3/5...', 'Discriminator Loss: 0.9167...', 'Generator Loss: 2.3409')\n",
+      "('Epoch 4/5...', 'Discriminator Loss: 1.1642...', 'Generator Loss: 1.1514')\n"
+     ]
+    }
+   ],
    "source": [
-    "batch_size = 100\n",
-    "epochs = 100\n",
+    "batch_size = 20\n",
+    "epochs = 5\n",
     "samples = []\n",
     "losses = []\n",
     "saver = tf.train.Saver(var_list = g_vars)\n",
