feat: making sure notebooks are updated.

--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -18,15 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found mnist Data\n",
-      "Found celeba Data\n"
+      "Downloading mnist: 9.92MB [00:28, 353kB/s]                             \n",
+      "Extracting mnist: 100%|██████████| 60.0k/60.0k [00:08<00:00, 6.87kFile/s]\n",
+      "Downloading celeba:  12%|█▏        | 173M/1.44G [08:45<1:38:31, 215kB/s]   "
      ]
     }
    ],
