--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "All files found!\n"
+      "CIFAR-10 Dataset:   1%|          | 1.32M/170M [00:09<21:17, 132kB/s]   "
      ]
     }
    ],
@@ -528,8 +528,9 @@
     "    : num_outputs: The number of output that the new tensor should be.\n",
     "    : return: A 2-D tensor where the second dimension is num_outputs.\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    w, b = get_w_b(x_tensor, num_outputs)\n",
+    "    layer = tf.add(tf.matmul(x_tensor, w), b)\n",
+    "    return layer\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -568,31 +569,77 @@
     "    : keep_prob: Placeholder tensor that hold dropout keep probability.\n",
     "    : return: Tensor that represents logits\n",
     "    \"\"\"\n",
+    "    # Hyper parameters\n",
+    "    conv_num_outputs_layer_1 = 64\n",
+    "    conv_ksize_layer_1 = (3, 3)\n",
+    "    conv_strides_layer_1 = (1, 1)\n",
+    "    pool_ksize_layer_1 = (2, 2)\n",
+    "    pool_strides_layer_1 = (2, 2)\n",
+    "    \n",
+    "    conv_num_outputs_layer_2 = 64\n",
+    "    conv_ksize_layer_2 = (3, 3)\n",
+    "    conv_strides_layer_2 = (2, 2)\n",
+    "    pool_ksize_layer_2 = (2, 2)\n",
+    "    pool_strides_layer_2 = (2, 2)\n",
+    "    \n",
+    "    conv_num_outputs_layer_3 = 64\n",
+    "    conv_ksize_layer_3 = (3, 3)\n",
+    "    conv_strides_layer_3 = (1, 1)\n",
+    "    pool_ksize_layer_3 = (2, 2)\n",
+    "    pool_strides_layer_3 = (2, 2)\n",
+    "    \n",
+    "    fc_layer_1_num_outputs = 512\n",
+    "    fc_layer_2_num_outputs = 256\n",
+    "    output_num_outputs = 10 # ten classes\n",
+    "    \n",
     "    # TODO: Apply 1, 2, or 3 Convolution and Max Pool layers\n",
     "    #    Play around with different number of outputs, kernel size and stride\n",
     "    # Function Definition from Above:\n",
     "    #    conv2d_maxpool(x_tensor, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides)\n",
-    "    \n",
+    "    conv_layer_1 = conv2d_maxpool(x,\n",
+    "                           conv_num_outputs_layer_1,\n",
+    "                           conv_ksize_layer_1,\n",
+    "                           conv_strides_layer_1,\n",
+    "                           pool_ksize_layer_1,\n",
+    "                           pool_strides_layer_1)\n",
+    "    conv_layer_2 = conv2d_maxpool(conv_layer_1,\n",
+    "                           conv_num_outputs_layer_2,\n",
+    "                           conv_ksize_layer_2,\n",
+    "                           conv_strides_layer_2,\n",
+    "                           pool_ksize_layer_2,\n",
+    "                           pool_strides_layer_2)\n",
+    "    conv_layer_3 = conv2d_maxpool(conv_layer_2,\n",
+    "                           conv_num_outputs_layer_3,\n",
+    "                           conv_ksize_layer_3,\n",
+    "                           conv_strides_layer_3,\n",
+    "                           pool_ksize_layer_3,\n",
+    "                           pool_strides_layer_3)\n",
     "\n",
     "    # TODO: Apply a Flatten Layer\n",
     "    # Function Definition from Above:\n",
     "    #   flatten(x_tensor)\n",
-    "    \n",
+    "    flatten_layer = flatten(conv_layer_3)\n",
     "\n",
     "    # TODO: Apply 1, 2, or 3 Fully Connected Layers\n",
     "    #    Play around with different number of outputs\n",
     "    # Function Definition from Above:\n",
     "    #   fully_conn(x_tensor, num_outputs)\n",
+    "    # Layer 1\n",
+    "    fc_layer_1 = fully_conn(flatten_layer, fc_layer_1_num_outputs)\n",
+    "    fc_layer_1 = tf.nn.dropout(fc_layer_1, keep_prob)\n",
     "    \n",
+    "    # Layer 2\n",
+    "    fc_layer_2 = fully_conn(fc_layer_1, fc_layer_2_num_outputs)\n",
+    "    fc_layer_2 = tf.nn.dropout(fc_layer_2, keep_prob)\n",
     "    \n",
     "    # TODO: Apply an Output Layer\n",
     "    #    Set this to the number of classes\n",
     "    # Function Definition from Above:\n",
     "    #   output(x_tensor, num_outputs)\n",
-    "    \n",
+    "    output_layer = output(fc_layer_2, output_num_outputs)\n",
     "    \n",
     "    # TODO: return output\n",
-    "    return None\n",
+    "    return output_layer\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -661,8 +708,8 @@
     "    : feature_batch: Batch of Numpy image data\n",
     "    : label_batch: Batch of Numpy label data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    pass\n",
+    "    feed_dict = { x: feature_batch, y: label_batch, keep_prob: keep_probability }\n",
+    "    session.run(optimizer, feed_dict=feed_dict)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -696,8 +743,13 @@
     "    : cost: TensorFlow cost function\n",
     "    : accuracy: TensorFlow accuracy function\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    pass"
+    "    feed_dict_loss = { x: feature_batch, y: label_batch, keep_prob: 1.0 }\n",
+    "    loss = session.run(cost, feed_dict=feed_dict_loss)\n",
+    "    \n",
+    "    feed_dict_accuracy = { x: valid_features, y: valid_labels, keep_prob: 1.0 }\n",
+    "    valid_accuracy = session.run(accuracy, feed_dict=feed_dict_accuracy)\n",
+    "    \n",
+    "    print('Loss: {:.4f} Validation Accuracy: {:.4f}'.format(loss, valid_accuracy))"
    ]
   },
   {
@@ -724,9 +776,9 @@
    "outputs": [],
    "source": [
     "# TODO: Tune Parameters\n",
-    "epochs = 1\n",
-    "batch_size = 96\n",
-    "keep_probability = .5"
+    "epochs = 50\n",
+    "batch_size = 256\n",
+    "keep_probability = 0.7"
    ]
   },
   {
@@ -913,7 +965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
